<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">


        <item
            android:id="@+id/nav_item_home"
            android:icon="@drawable/home4"
            android:title="@string/nav_menu_0"/>
        <item
            android:id="@+id/nav_item_Profile"
            android:icon="@drawable/profile"
            android:title="@string/nav_menu_1"/>
        <item
            android:id="@+id/nav_item_setting_noti"
            android:icon="@drawable/notification"
            android:title="@string/nav_menu_2"/>
        <item
            android:id="@+id/nav_item_notice"
            android:icon="@drawable/notice"
            android:title="@string/nav_menu_4"/>
        <item
            android:id="@+id/nav_item_ask"
            android:icon="@drawable/mail2"
            android:title="@string/nav_menu_5"/>
        <item
            android:id="@+id/nav_item_logout"
            android:icon="@drawable/logout"
            android:title="@string/nav_menu_3"/>

    </group>
</menu>